Added repo link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1 id="header-1">Hardware components</h1>
         <p>blablabla.</p>
 
-        <h2 id="header-2">SafeTI</h2>
+        <h2 id="header-2"><a href="https://github.com/bsccaos/SafeTI">SafeTI</a></h2>
         <p>SafeTI description.</p>
         <p>paper link. repo link</p>
 
