Added temporal messages

--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
       <header>
         <img src="img/bsc-logo.svg" alt="BSC Logo" />
         <h2 id="header-2">Contact Info</h2>
-        <p>mail jaume?</p>
+        <p>Contact Mail: TBD</p>
       </header>
       <section>
         <h1><a href="https://github.com/bsccaos">BSC CAOS</a></h1>
-        <p>blablabla.</p>
+        <p>Webpage under construction</p>
 
         <h1 id="header-1">Hardware components</h1>
-        <p>blablabla.</p>
+        <p></p>
 
         <h2 id="header-2"><a href="https://github.com/bsccaos/SafeTI">SafeTI</a></h2>
-        <p>SafeTI description.</p>
-        <p>paper link. repo link</p>
+        <p>TBD</p>
+        <p></p>
 
-        <hr />
+        <h2 id="header-2">SafeSU</h2>
+        <p>TBD.</p>
+        <p></p>
 
-        <h2 id="header-2">SafeTI</h2>
-        <p>Component 2 description.</p>
-        <p>paper link. repo link</p>
+        <h2 id="header-2">SafeDE</h2>
+        <p>TBD.</p>
+        <p></p>
 
         <hr />
       </section>
