--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
         <p>Contact Mail: TBD</p>
       </header>
       <section>
-        <h1><a href="https://github.com/bsccaos">BSC CAOS</a></h1>
+        <h1></a>BSC CAOS</a></h1>
         <p>Webpage under construction</p>
 
         <h1 id="header-1">Hardware components</h1>
         <p></p>
 
-        <h2 id="header-2"><a href="https://github.com/bsccaos/SafeTI">SafeTI</a></h2>
+        <h2 id="header-2">SafeTI</h2>
         <p>TBD</p>
         <p></p>
 
         <h2 id="header-2">SafeSU</h2>
-        <p>TBD.</p>
+        <p>TBD</p>
         <p></p>
 
         <h2 id="header-2">SafeDE</h2>
-        <p>TBD.</p>
+        <p>TBD</p>
         <p></p>
 
         <hr />
