First description for SafeTI, SafeSU and SafeDE, and links to the repo

--- a/index.html
+++ b/index.html
@@ -20,16 +20,26 @@
         <p></p>
 
         <h2 id="header-2">SafeTI</h2>
-        <p>TBD</p>
-        <p></p>
+        <p>This unit acts as an AHB/AXI Master IP and as a core with limited capabilities, only generating transactions to the bus by reading
+		and writing to the AHB Slave RAM memory and controlled via APB registers. The injector works along with the multi-core setup instantiated on the platform and other
+		peripherals and monitoring units. The Traffic Injector is based on generic Direct Memory Access functionality fundamentals and
+		extends its features to meet the injector objectives.</p>
+        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/bsc_traffic_injector/-/tree/develop"><img src="img/logo-extra-whitespace.png">Access now to SafeTI Repository
+		</a></p>
 
         <h2 id="header-2">SafeSU</h2>
-        <p>TBD</p>
-        <p></p>
+        <p>The Safe Statistics Unit (SafeSU for short) is an RTL IP that implements several mechanisms for multicore timing interference verification, validation, 
+		and monitoring. It has been integrated into commercial space-graded RISC-V and SparcV8 MPSoCs.</p>
+        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/bsc_pmu"><img src="img/logo-extra-whitespace.png">Access now to SafeSU Repository
+		</a></p>
 
         <h2 id="header-2">SafeDE</h2>
-        <p>TBD</p>
-        <p></p>
+        <p>Diversity Enforcement module can be deployed to avoid unreasonable risk of a single fault leading the system to afailure. Diversity Enforcement hardware module 
+		providing light-lockstep support by means of a non-intrusive and flexible hardware module that preservess taggering across cores running redundant threads, 
+		thus bringing time diversity.</p>
+        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/bsc_lightlock/-/tree/develop"><img src="img/logo-extra-whitespace.png">Access now to SafeDE Repository
+		</a></p>
+
 
         <hr />
       </section>
