Final changes for first published version.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
       <header>
         <img src="img/bsc-logo.svg" alt="BSC Logo" />
         <h2 id="header-2">Contact Info</h2>
-        <p>Contact Mail: TBD</p>
+        <p>For collaboration or business inquires: jaume.abella@bsc.es</p>
+        <p>For technical questions, ask the contact email in each project.</p>
       </header>
       <section>
         <h1></a>BSC CAOS</a></h1>
-        <p>Webpage under construction</p>
 
         <h1 id="header-1">Hardware components</h1>
         <p></p>
@@ -24,20 +24,20 @@
 		transactions to the bus by reading and writing to the AHB Slave RAM memory and controlled via APB registers. The injector works along with the multi-core 
 		setup instantiated on the platform and other peripherals and monitoring units. In order to generate traffic to the bus, the module performs a set of AMBA 
 		transactions based on data descriptors set at startup into a predefined memory address range.</p>
-        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/bsc_traffic_injector/-/tree/develop"><img src="img/logo-extra-whitespace.png">Access now to SafeTI Repository
+        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/"><img src="img/logo-extra-whitespace.png">Access to SafeTI repository coming soon
 		</a></p>
 
         <h2 id="header-2">SafeSU</h2>
         <p>The Safe Statistics Unit (SafeSU for short) is an RTL IP that implements several mechanisms for multicore timing interference verification, validation, 
 		and monitoring. It has been integrated into commercial space-graded RISC-V and SparcV8 MPSoCs.</p>
-        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/bsc_pmu"><img src="img/logo-extra-whitespace.png">Access now to SafeSU Repository
+        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/"><img src="img/logo-extra-whitespace.png">Access to SafeSU repository coming soon
 		</a></p>
 
         <h2 id="header-2">SafeDE</h2>
         <p>Diversity Enforcement module can be deployed to avoid unreasonable risk of a single fault leading the system to a failure and detect common-cause faults
 		(CCF) derived from the logic. Diversity Enforcement hardware module providing light-lockstep support by means of a non-intrusive and flexible hardware module
 		that preserves staggering across cores running redundant threads, thus bringing time diversity.</p>
-        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/bsc_lightlock/-/tree/develop"><img src="img/logo-extra-whitespace.png">Access now to SafeDE Repository
+        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/"><img src="img/logo-extra-whitespace.png">Access to SafeDE repository coming soon
 		</a></p>
 
 
