SafeSU repository already available
Modified the text of the SafeSU repository (removed coming soon)

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2 id="header-2">SafeSU</h2>
         <p>The Safe Statistics Unit (SafeSU for short) is an RTL IP that implements several mechanisms for multicore timing interference verification, validation, 
 		and monitoring. It has been integrated into commercial space-graded RISC-V and SparcV8 MPSoCs.</p>
-        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/"><img src="img/logo-extra-whitespace.png">Access to SafeSU repository coming soon
+        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/bsc_pmu/"><img src="img/logo-extra-whitespace.png">Access to SafeSU (named as bsc_pmu) repository
 		</a></p>
 
         <h2 id="header-2">SafeDE</h2>
