SafeTI made public
Added SafeTI Link

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <p></p>
 
         <h2 id="header-2">SafeTI</h2>
-        <p>This unit acts as an AHB Master IP connected to the main AMBA bus on the SELENE Platform. It acts as a core with limited capabilities, only generating
+        <p>The Safe Traffic Injector unit acts as an AHB Master IP connected to the main AMBA bus on the SELENE Platform. It acts as a core with limited capabilities, only generating
 		transactions to the bus by reading and writing to the AHB Slave RAM memory and controlled via APB registers. The injector works along with the multi-core 
 		setup instantiated on the platform and other peripherals and monitoring units. In order to generate traffic to the bus, the module performs a set of AMBA 
 		transactions based on data descriptors set at startup into a predefined memory address range.</p>
-        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/"><img src="img/logo-extra-whitespace.png">Access to SafeTI repository coming soon
+        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/bsc_safeti/"><img src="img/logo-extra-whitespace.png">Access to SafeTI repository
 		</a></p>
 
         <h2 id="header-2">SafeSU</h2>
