SafeDE made public
SafeDE is ready to be published

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p>Diversity Enforcement module can be deployed to avoid unreasonable risk of a single fault leading the system to a failure and detect common-cause faults
 		(CCF) derived from the logic. Diversity Enforcement hardware module providing light-lockstep support by means of a non-intrusive and flexible hardware module
 		that preserves staggering across cores running redundant threads, thus bringing time diversity.</p>
-        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/"><img src="img/logo-extra-whitespace.png">Access to SafeDE repository coming soon
+        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/bsc_lightlock/"><img src="img/logo-extra-whitespace.png">Access to SafeDE repository
 		</a></p>
 
 
