Hidding DRAC Automotive Accelerator temporarly
Since we need to clear out the license of this component we temporarily hide it.

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/bsc_lightlock/"><img src="img/logo-extra-whitespace.png">Access to SafeDE repository
 		</a></p>
 
-        <h2 id="header-2">DRAC Automotive Accelerator</h2>
+        <!-- <h2 id="header-2">DRAC Automotive Accelerator</h2>
         <p>Convolutional Neural Network (CNN) accelerator module based on a systolic array structure with on-chip convolutional mapping, written in SystemVerilog. This work is part of the DRAC project and targets an ASIC implementation in 22 nm.</p>
         <p><a href="https://gitlab.bsc.es/jfornt/drac_automotive_accelerator"><img src="img/logo-extra-whitespace.png">Access to DRAC Automotive Accelerator repository
 		</a></p>
-
+	-->
         <hr />
       </section>
     </div>
