--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 		redundant threads, thus bringing time diversity to avoid common cause failures.</p>
         <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/bsc_lightlock/"><img src="img/logo-extra-whitespace.png">Access to SafeDE repository
 		</a></p>
+	  
+	<h2 id="header-2">SafeDM</h2>
+        <p>This hardware module provides support to monitor the diversity between two redundant processors.</p>
+        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/diversity_quantifier"><img src="img/logo-extra-whitespace.png">Access to SafeDE repository
+		</a></p>
+
 
         <!-- <h2 id="header-2">DRAC Automotive Accelerator</h2>
         <p>Convolutional Neural Network (CNN) accelerator module based on a systolic array structure with on-chip convolutional mapping, written in SystemVerilog. This work is part of the DRAC project and targets an ASIC implementation in 22 nm.</p>
