--- a/index.html
+++ b/index.html
@@ -19,31 +19,30 @@
         <h1 id="header-1">Hardware components</h1>
         <p></p>
 
-        <h2 id="header-2">SafeTI</h2>
+        <h2 id="header-2">SafeTI</h2><p><b>DOI:</b> <a href="https://doi.org/10.1109/IOLTS52814.2021.9486689">10.1109/IOLTS52814.2021.9486689</a></p>
         <p>The Safe Traffic Injector (SafeTI for short) unit acts as an AHB Master IP connected to the main AMBA bus. It acts as a core with limited capabilities, only generating
 		transactions to the bus by reading and writing to the AHB Slave RAM memory and controlled via APB registers. The injector works along with the multi-core 
 		setup instantiated on the platform and other peripherals and monitoring units. In order to generate traffic to the bus, the module performs a set of AMBA 
 		transactions based on data descriptors set at startup into a predefined memory address range.</p>
-        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/bsc_safeti/"><img src="img/logo-extra-whitespace.png">Access to SafeTI repository
-		</a></p>
+        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/bsc_safeti/"><img src="img/logo-extra-whitespace.png">Access to SafeTI repository</a></p>
 
         <h2 id="header-2">SafeSU</h2>
+	<p><b>DOI:</b> <a href="https://doi.org/10.1109/ETS50041.2021.9465444">10.1109/ETS50041.2021.9465444</a><br>
+	<b>DOI:</b> <a href="https://doi.org/10.23919/DATE54114.2022.9774515">10.23919/DATE54114.2022.9774515</a></p>
         <p>The Safe Statistics Unit (SafeSU for short) is an RTL IP that implements several mechanisms for multicore timing interference verification, validation, 
 		and monitoring. It has been integrated into commercial space-graded RISC-V and SparcV8 MPSoCs.</p>
-        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/bsc_pmu/"><img src="img/logo-extra-whitespace.png">Access to SafeSU repository
-		</a></p>
+        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/bsc_pmu/"><img src="img/logo-extra-whitespace.png">Access to SafeSU repository</a></p>
 
         <h2 id="header-2">SafeDE</h2>
+	<p><b>DOI:</b> <a href="https://doi.org/10.1109/TDMR.2022.3156799">10.1109/TDMR.2022.3156799</a></p>
         <p>SafeDE (Safe Diversity Enforcer): This hardware module provides light-lockstep support by means of a non-intrusive and flexible hardware module that preserves staggering across cores running
 		redundant threads, thus bringing time diversity to avoid common cause failures.</p>
-        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/bsc_lightlock/"><img src="img/logo-extra-whitespace.png">Access to SafeDE repository
-		</a></p>
+        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/bsc_lightlock/"><img src="img/logo-extra-whitespace.png">Access to SafeDE repository</a></p>
 	  
 	<h2 id="header-2">SafeDM</h2>
+	<p><b>DOI:</b> <a href="https://doi.org/10.23919/DATE54114.2022.9774540">10.23919/DATE54114.2022.9774540</a></p>
         <p>SafeDM (Safe Diversity Measurer): This hardware module provides support to monitor the diversity between two redundant processors executing redundant tasks.</p>
-        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/diversity_quantifier"><img src="img/logo-extra-whitespace.png">Access to SafeDM repository
-		</a></p>
-
+        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/diversity_quantifier"><img src="img/logo-extra-whitespace.png">Access to SafeDM repository</a></p>
 
         <!-- <h2 id="header-2">DRAC Automotive Accelerator</h2>
         <p>Convolutional Neural Network (CNN) accelerator module based on a systolic array structure with on-chip convolutional mapping, written in SystemVerilog. This work is part of the DRAC project and targets an ASIC implementation in 22 nm.</p>
