Added IOLTS DOI to SafeDE

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/bsc_pmu/"><img src="img/logo-extra-whitespace.png">Access to SafeSU repository</a></p>
 
         <h2 id="header-2">SafeDE</h2>
-	<p><b>DOI:</b> <a href="https://doi.org/10.1109/TDMR.2022.3156799">10.1109/TDMR.2022.3156799</a></p>
+	<p><b>DOI:</b> <a href="https://doi.org/10.1109/TDMR.2022.3156799">10.1109/TDMR.2022.3156799</a><br>
+	<b>DOI:</b> <a href="http://dx.doi.org/10.1109/IOLTS52814.2021.9486715">10.1109/IOLTS52814.2021.9486715</a></p>
         <p>SafeDE (Safe Diversity Enforcer): This hardware module provides light-lockstep support by means of a non-intrusive and flexible hardware module that preserves staggering across cores running
 		redundant threads, thus bringing time diversity to avoid common cause failures.</p>
         <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/bsc_lightlock/"><img src="img/logo-extra-whitespace.png">Access to SafeDE repository</a></p>
