--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         <p>SafeDM (Safe Diversity Measurer): This hardware module provides support to monitor the diversity between two redundant processors executing redundant tasks.</p>
         <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/diversity_quantifier"><img src="img/logo-extra-whitespace.png">Access to SafeDM repository</a></p>
 
+	<h2 id="header-2">SafeSoftDR</h2>
+	<p><b>DOI:</b> <a href="https://doi.org/10.48550/arXiv.2210.00833">arXiv:2210.00833</a></p>
+        <p>SafeSoftDR (Safe Software Diverse Redundancy library): This software library provides the programmer with an interface to enable a software diveres redundant execution in a user-defined function.</p>
+        <p><a href="https://gitlab.bsc.es/caos_hw/software-diverse-redundancy-library"><img src="img/logo-extra-whitespace.png">Access to SafeSoftDR repository</a></p>
         <!-- <h2 id="header-2">DRAC Automotive Accelerator</h2>
         <p>Convolutional Neural Network (CNN) accelerator module based on a systolic array structure with on-chip convolutional mapping, written in SystemVerilog. This work is part of the DRAC project and targets an ASIC implementation in 22 nm.</p>
         <p><a href="https://gitlab.bsc.es/jfornt/drac_automotive_accelerator"><img src="img/logo-extra-whitespace.png">Access to DRAC Automotive Accelerator repository
