--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
 	<p><b>DOI:</b> <a href="https://doi.org/10.23919/DATE54114.2022.9774540">10.23919/DATE54114.2022.9774540</a></p>
         <p>SafeDM (Safe Diversity Measurer): This hardware module provides support to monitor the diversity between two redundant processors executing redundant tasks.</p>
         <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/diversity_quantifier"><img src="img/logo-extra-whitespace.png">Access to SafeDM repository</a></p>
+	  
+	<h2 id="header-2">SafeLS</h2>
+	<p><b>DOI:</b> Pending <!-- <a href="https://doi.org/10.48550/arXiv.2210.00833">arXiv:2210.00833</a></p>-->
+        <p>SafeSoftDR (Safe Software Diverse Redundancy library): The Safe Lockstep (SafeLS for short) unit is a RISC-V open-source lockstep core based on Frontgrade Gaisler AB's NOEL-V core for the 
+		space domain, as well as its integration in the SELENE SoC (<a href="https://gitlab.com/selene-riscv-platform/selene-hardware">) that provides a complete microcontroller synthesizable on FPGA 
+		successfully assessed against space, automotive and railway safety-critical applications in the past.</p>
+        <p><a href="https://gitlab.bsc.es/caos_hw/papers/-/tree/master/SafeLS"><img src="img/logo-extra-whitespace.png">Access to SafeLS repository</a></p>
 
 	<h2 id="header-2">SafeSoftDR</h2>
 	<p><b>DOI:</b> <a href="https://doi.org/10.48550/arXiv.2210.00833">arXiv:2210.00833</a></p>
