Fixed name for SafeLS

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	  
 	<h2 id="header-2">SafeLS</h2>
 	<p><b>DOI:</b> Pending <!-- <a href="https://doi.org/10.48550/arXiv.2210.00833">arXiv:2210.00833</a></p>-->
-        <p>SafeSoftDR (Safe Software Diverse Redundancy library): The Safe Lockstep (SafeLS for short) unit is a RISC-V open-source lockstep core based on Frontgrade Gaisler AB's NOEL-V core for the 
+        <p>SafeLS (Safe Lockstep): The Safe Lockstep (SafeLS for short) unit is a RISC-V open-source lockstep core based on Frontgrade Gaisler AB's NOEL-V core for the 
 		space domain, as well as its integration in the SELENE SoC (<a href="https://gitlab.com/selene-riscv-platform/selene-hardware"</a>) that provides a complete microcontroller synthesizable on FPGA 
 		successfully assessed against space, automotive and railway safety-critical applications in the past.</p>
         <p><a href="https://gitlab.bsc.es/caos_hw/papers/-/tree/master/SafeLS"><img src="img/logo-extra-whitespace.png">Access to SafeLS repository</a></p>
