Fixed SafeLS link

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 	<p><b>DOI:</b> Pending </p><!-- <a href="https://doi.org/10.48550/arXiv.2210.00833">arXiv:2210.00833</a></p>-->
         <p>SafeLS (Safe Lockstep): The Safe Lockstep (SafeLS for short) unit is a RISC-V open-source lockstep core based on Frontgrade Gaisler AB's NOEL-V core for the 
 		space domain, as well as its integration in the <a href="https://gitlab.com/selene-riscv-platform/selene-hardware">SELENE SoC</a> that provides a complete microcontroller synthesizable on FPGA 
-		successfully assessed against space, automotive and railway safety-critical applications in the past.</p>
-        <p><a href="https://gitlab.bsc.es/caos_hw/papers/-/tree/master/SafeLS"><img src="img/logo-extra-whitespace.png">Access to SafeLS repository</a></p>
+		successfully assessed against space, automotive, and railway safety-critical applications in the past.</p>
+        <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/safels"><img src="img/logo-extra-whitespace.png">Access to SafeLS repository</a></p>
 
 	<h2 id="header-2">SafeSoftDR</h2>
 	<p><b>DOI:</b> <a href="https://doi.org/10.48550/arXiv.2210.00833">arXiv:2210.00833</a></p>
