--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p><a href="https://gitlab.bsc.es/caos_hw/hdl_ip/diversity_quantifier"><img src="img/logo-extra-whitespace.png">Access to SafeDM repository</a></p>
 	  
 	<h2 id="header-2">SafeLS</h2>
-	<p><b>DOI:</b> Pending </p><!-- <a href="https://doi.org/10.48550/arXiv.2210.00833">arXiv:2210.00833</a></p>-->
+	<p><b>DOI:</b> <a href="https://10.1109/IOLTS59296.2023.10224867">10.1109/IOLTS59296.2023.10224867</a></p>
         <p>SafeLS (Safe Lockstep): The Safe Lockstep (SafeLS for short) unit is a RISC-V open-source lockstep core based on Frontgrade Gaisler AB's NOEL-V core for the 
 		space domain, as well as its integration in the <a href="https://gitlab.com/selene-riscv-platform/selene-hardware">SELENE SoC</a> that provides a complete microcontroller synthesizable on FPGA 
 		successfully assessed against space, automotive, and railway safety-critical applications in the past.</p>
