Changed gitlab to github logo

--- a/index.html
+++ b/index.html
@@ -24,41 +24,41 @@
 		transactions to the bus by reading and writing to the AHB Slave RAM memory and controlled via APB registers. The injector works along with the multi-core 
 		setup instantiated on the platform and other peripherals and monitoring units. In order to generate traffic to the bus, the module performs a set of AMBA 
 		transactions based on data descriptors set at startup into a predefined memory address range.</p>
-        <p><a href="https://github.com/bsc-loca/SafeTI/"><img src="img/logo-extra-whitespace.png">Access to SafeTI repository</a></p>
+        <p><a href="https://github.com/bsc-loca/SafeTI/"><img src="img/logo_github.png">Access to SafeTI repository</a></p>
 
         <h2 id="header-2">SafeSU</h2>
 	<p><b>DOI:</b> <a href="https://doi.org/10.1109/ETS50041.2021.9465444">10.1109/ETS50041.2021.9465444</a><br>
 	<b>DOI:</b> <a href="https://doi.org/10.23919/DATE54114.2022.9774515">10.23919/DATE54114.2022.9774515</a></p>
         <p>The Safe Statistics Unit (SafeSU for short) is an RTL IP that implements several mechanisms for multicore timing interference verification, validation, 
 		and monitoring. It has been integrated into commercial space-graded RISC-V and SparcV8 MPSoCs.</p>
-        <p><a href="https://github.com/bsc-loca/SafeSU/"><img src="img/logo-extra-whitespace.png">Access to SafeSU repository</a></p>
+        <p><a href="https://github.com/bsc-loca/SafeSU/"><img src="img/logo_github.png">Access to SafeSU repository</a></p>
 
         <h2 id="header-2">SafeDE</h2>
 	<p><b>DOI:</b> <a href="https://doi.org/10.1109/TDMR.2022.3156799">10.1109/TDMR.2022.3156799</a><br>
 	<b>DOI:</b> <a href="http://dx.doi.org/10.1109/IOLTS52814.2021.9486715">10.1109/IOLTS52814.2021.9486715</a></p>
         <p>SafeDE (Safe Diversity Enforcer): This hardware module provides light-lockstep support by means of a non-intrusive and flexible hardware module that preserves staggering across cores running
 		redundant threads, thus bringing time diversity to avoid common cause failures.</p>
-        <p><a href="https://github.com/bsc-loca/SafeDE/"><img src="img/logo-extra-whitespace.png">Access to SafeDE repository</a></p>
+        <p><a href="https://github.com/bsc-loca/SafeDE/"><img src="img/logo_github.png">Access to SafeDE repository</a></p>
 	  
 	<h2 id="header-2">SafeDM</h2>
 	<p><b>DOI:</b> <a href="https://doi.org/10.23919/DATE54114.2022.9774540">10.23919/DATE54114.2022.9774540</a></p>
         <p>SafeDM (Safe Diversity Measurer): This hardware module provides support to monitor the diversity between two redundant processors executing redundant tasks.</p>
-        <p><a href="https://github.com/bsc-loca/SafeDM"><img src="img/logo-extra-whitespace.png">Access to SafeDM repository</a></p>
+        <p><a href="https://github.com/bsc-loca/SafeDM"><img src="img/logo_github.png">Access to SafeDM repository</a></p>
 	  
 	<h2 id="header-2">SafeLS</h2>
 	<p><b>DOI:</b> <a href="https://10.1109/IOLTS59296.2023.10224867">10.1109/IOLTS59296.2023.10224867</a></p>
         <p>SafeLS (Safe Lockstep): The Safe Lockstep (SafeLS for short) unit is a RISC-V open-source lockstep core based on Frontgrade Gaisler AB's NOEL-V core for the 
 		space domain, as well as its integration in the <a href="https://gitlab.com/selene-riscv-platform/selene-hardware">SELENE SoC</a> that provides a complete microcontroller synthesizable on FPGA 
 		successfully assessed against space, automotive, and railway safety-critical applications in the past.</p>
-        <p><a href="https://github.com/bsc-loca/SafeLS"><img src="img/logo-extra-whitespace.png">Access to SafeLS repository</a></p>
+        <p><a href="https://github.com/bsc-loca/SafeLS"><img src="img/logo_github.png">Access to SafeLS repository</a></p>
 
 	<h2 id="header-2">SafeSoftDR</h2>
 	<p><b>DOI:</b> <a href="https://doi.org/10.48550/arXiv.2210.00833">arXiv:2210.00833</a></p>
         <p>SafeSoftDR (Safe Software Diverse Redundancy library): This software library provides the programmer with an interface to enable a software diveres redundant execution in a user-defined function.</p>
-        <p><a href="https://github.com/bsc-loca/SafeSoftDR"><img src="img/logo-extra-whitespace.png">Access to SafeSoftDR repository</a></p>
+        <p><a href="https://github.com/bsc-loca/SafeSoftDR"><img src="img/logo_github.png">Access to SafeSoftDR repository</a></p>
         <!-- <h2 id="header-2">DRAC Automotive Accelerator</h2>
         <p>Convolutional Neural Network (CNN) accelerator module based on a systolic array structure with on-chip convolutional mapping, written in SystemVerilog. This work is part of the DRAC project and targets an ASIC implementation in 22 nm.</p>
-        <p><a href="https://gitlab.bsc.es/jfornt/drac_automotive_accelerator"><img src="img/logo-extra-whitespace.png">Access to DRAC Automotive Accelerator repository
+        <p><a href="https://gitlab.bsc.es/jfornt/drac_automotive_accelerator"><img src="img/logo_github.png">Access to DRAC Automotive Accelerator repository
 		</a></p>
 	-->
         <hr />
