--- a/index.html
+++ b/index.html
@@ -54,14 +54,13 @@
 
 	<h2 id="header-2">SafeSoftDR</h2>
 	<p><b>DOI:</b> <a href="https://doi.org/10.48550/arXiv.2210.00833">arXiv:2210.00833</a></p>
-        <p>SafeSoftDR (Safe Software Diverse Redundancy library): This software library provides the programmer with an interface to enable a software diveres redundant execution in a user-defined function.</p>
+        <p>SafeSoftDR (Safe Software Diverse Redundancy library): This software library provides the programmer with an interface to enable a software diverse redundant execution in a user-defined function.</p>
         <p><a href="https://github.com/bsc-loca/SafeSoftDR"><img src="img/logo_github.png">Access to SafeSoftDR repository</a></p>
-        <!-- <h2 id="header-2">DRAC Automotive Accelerator</h2>
+	      
+        <h2 id="header-2">DRAC Automotive Accelerator (SAURIA)</h2>
         <p>Convolutional Neural Network (CNN) accelerator module based on a systolic array structure with on-chip convolutional mapping, written in SystemVerilog. This work is part of the DRAC project and targets an ASIC implementation in 22 nm.</p>
-        <p><a href="https://gitlab.bsc.es/jfornt/drac_automotive_accelerator"><img src="img/logo_github.png">Access to DRAC Automotive Accelerator repository
-		</a></p>
-	-->
-        <hr />
+        <p><a href="https://github.com/bsc-loca/sauria"><img src="img/logo_github.png">Access to DRAC Automotive Accelerator (SAURIA) repository</a></p>
+	<hr />
       </section>
     </div>
   </body>
